[CHORE] add article & category model
